Fix h5 on mobile

--- a/templates/_styles/base.scss
+++ b/templates/_styles/base.scss
@@ -42,7 +42,7 @@ h4,
 
 h5,
 .h5 {
-  font-size: 28px;
+  font-size: 18px;
 }
 
 h6,
